// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package helloworld;

service TopStoriesService {
  rpc FetchStories (Story) returns (My_Replies) {}
}

// The request message containing the Story's data.
message Story {
	int32 ID = 1;
	string Title = 2;
	int32 Score  = 3;
	int32 DateStamp  = 4;
}

// The response message containing the Title and the Score
message Reply {
  string Title = 1;
	int32 Score  = 2;
}

message My_Replies {
  repeated Reply reply = 1;
}
